Add kindle to server
