# server/book.go
@@ -1,13 +1,60 @@
 package server
 
 import (
+	"context"
 	"strconv"
 
 	"github.com/ahobsonsayers/abs-goodreads/goodreads"
+	"github.com/ahobsonsayers/abs-goodreads/kindle"
 	"github.com/samber/lo"
 )
 
-func GoodreadsBookToAudioBookShelfBook(goodreadsBook goodreads.Book) BookMetadata {
+func searchGoodreadsBooks(ctx context.Context, bookTitle string, bookAuthor *string) ([]BookMetadata, error) {
+	goodreadsBooks, err := goodreads.DefaultClient.SearchBooks(ctx, bookTitle, bookAuthor)
+	if err != nil {
+		return nil, err
+	}
+
+	books := make([]BookMetadata, 0, len(goodreadsBooks))
+	for _, goodreadsBook := range goodreadsBooks {
+		book := goodreadsBookToBookMetadata(goodreadsBook)
+		books = append(books, book)
+	}
+
+	return books, nil
+}
+
+func searchKindleBooks(
+	ctx context.Context,
+	countryCode SearchKindleParamsRegion,
+	bookTitle string,
+	bookAuthor *string,
+) ([]BookMetadata, error) {
+	kindleClient, err := kindle.NewClient(nil, lo.ToPtr(string(countryCode)))
+	if err != nil {
+		return nil, err
+	}
+
+	kindleBooks, err := kindleClient.Search(ctx, bookTitle, bookAuthor)
+	if err != nil {
+		return nil, err
+	}
+
+	books := make([]BookMetadata, 0, len(kindleBooks))
+	for _, kindleBook := range kindleBooks {
+		book := kindleBookToBookMetadata(kindleBook)
+		books = append(books, book)
+	}
+
+	return books, nil
+}
+
+func goodreadsBookToBookMetadata(goodreadsBook goodreads.Book) BookMetadata {
+	title := goodreadsBook.Work.Title
+	if title == "" {
+		title = goodreadsBook.BestEdition.Title
+	}
+
 	var authorName *string
 	if len(goodreadsBook.Authors) != 0 {
 		authorName = &goodreadsBook.Authors[0].Name
@@ -29,7 +76,7 @@ func GoodreadsBookToAudioBookShelfBook(goodreadsBook goodreads.Book) BookMetadat
 
 	return BookMetadata{
 		// Work Fields
-		Title:         goodreadsBook.Work.Title,
+		Title:         title,
 		Author:        authorName,
 		PublishedYear: lo.ToPtr(strconv.Itoa(goodreadsBook.Work.PublicationYear)),
 		// Edition Fields
@@ -41,5 +88,20 @@ func GoodreadsBookToAudioBookShelfBook(goodreadsBook goodreads.Book) BookMetadat
 		// Other fields
 		Series: &series,
 		Genres: lo.ToPtr([]string(goodreadsBook.Genres)),
+	}
+}
+
+func kindleBookToBookMetadata(kindleBook kindle.Book) BookMetadata {
+	var publishedYear *string
+	if kindleBook.PublishDate != nil {
+		publishedYear = lo.ToPtr(strconv.Itoa(kindleBook.PublishDate.Year()))
+	}
+
+	return BookMetadata{
+		Asin:          &kindleBook.ASIN,
+		Title:         kindleBook.Title,
+		Author:        &kindleBook.Author,
+		Cover:         &kindleBook.Cover,
+		PublishedYear: publishedYear,
 	}
 }
